2004-08-10  Matthias Clasen  <mclasen@redhat.com>

	* gdk/Makefile.am: 
	* gtk/Makefile.am: Define TESTS, not TEST, so that make check
	actually triggers abicheck.sh.

	* gdk/makegdkalias.pl: 
	* gtk/makegtkalias.pl: Include glib.h before using glib symbols. D'oh.

	* gdk/makegdkalias.pl: 
	* gtk/makegtkalias.pl: Protect gtkalias.h by G_HAVE_GNUC_VISIBILITY.
	
	* gtk/Makefile.am: Include gtkalias.h in the generated
	sources gtkmarhalers.c and gtkmarshal.c.

	* gtk/makegtkalias.pl: Cosmetic fix.

	* gdk/Makefile.am: Remove the . which was accidentally added
	to SUBDIRS. Include gdkalias.h in the generated sources 
	gdkenumtypes.c and gdkmarshalers.c.

	* gdk/makegdkalias.pl: Cosmetic fix.

	* gdk/Makefile.am: Add gdkalias.h to BUILT_SOURCES.

2004-08-09  Hans Breuer  <hans@breuer.org>

	* gtk/makefile.msc.in : autogenerate gtk.def, cleanup

	* gdk/win32/gdkwindow-win32.c gdk/win32/gdkevents-win32.c : 
	removed long time unused ifdef/ed code (WITHOUT_WM_CREATE), 
	removed duplicated call to gdk_window_set_cursor()

Mon Aug  9 15:41:17 2004  Matthias Clasen  <maclas@gmx.de>

	Add hidden aliases for exported symbols which are
	used internally in order to get rid of many PLT 
	entries.  (#145519, Arjan van de Ven)
	
	* gdk/Makefile.am: Add rules to generate gdk.def and 
	gdkalias.h from gdk.symbols, and make make check check 
	the abi with abicheck.sh.

	* gdk/gdk.symbols: New file. Definition of the GDK ABI.
	The file can be processed by cpp to filter out certain 
	subsets of symbols.

	* gdk/abicheck.sh: New file. Script to check the actually 
	symbols exported from libgdk-x11.2.0.so against the symbols
	found in gdk.symbols.

	* gdk/makegdkalias.pl: New file. Perl script to generate the 
	header containing the alias definitions for internally used 
	exported symbols from a list of symbols.

	* gdk/*.c, gdk/x11/*.c: Include gdkalias.h
	
2004-08-09  Morten Welinder  <terra@gnome.org>

	* gdk/x11/gdkdnd-x11.c (gdk_drag_drop_succeeded): Fix C99ism.
