@@ -845,7 +845,7 @@ gtk_list_store_set_valist (GtkListStore *list_store,
 	}
     }
 
-  if (func != gtk_tree_data_list_compare_func)
+  if (func != _gtk_tree_data_list_compare_func)
     maybe_need_sort = TRUE;
 
   while (column != -1)
@@ -879,7 +879,7 @@ gtk_list_store_set_valist (GtkListStore *list_store,
 						   &value,
 						   FALSE) || emit_signal;
 
-      if (func == gtk_tree_data_list_compare_func &&
+      if (func == _gtk_tree_data_list_compare_func &&
 	  column == list_store->sort_column_id)
 	maybe_need_sort = TRUE;
 
@@ -2183,7 +2183,7 @@ gtk_list_store_sort_iter_changed (GtkListStore *list_store,
     }
 
   /* If it's the built in function, we don't sort. */
-  if (func == gtk_tree_data_list_compare_func &&
+  if (func == _gtk_tree_data_list_compare_func &&
       list_store->sort_column_id != column)
     return;
 
